pluridsheet-react > setup: package

--- a/packages/pluridsheet-react/tsconfig.json
+++ b/packages/pluridsheet-react/tsconfig.json
@@ -14,6 +14,9 @@
             "~components/*": [
                 "./source/components/*"
             ],
+            "~logic/*": [
+                "./source/logic/*"
+            ],
             "~utilities/*": [
                 "./source/utilities/*"
             ],
